--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@storybook/addon-essentials": "^8.5.6",
     "@storybook/addon-interactions": "^8.5.6",
     "@storybook/addon-onboarding": "^8.5.6",
+    "@storybook/addon-viewport": "^8.5.8",
     "@storybook/blocks": "^8.5.6",
     "@storybook/react": "^8.5.6",
     "@storybook/react-vite": "^8.5.6",
